@@ -209,6 +209,6 @@ __END__
 1826820:18f2682,18f2685,18f4682,18f4685:1822200:1824500
 1865200:18f6520,18f6620,18f6720,18f8520,18f8620,18f8720:1822200:1865200
 1865270:18f6527,18f6622,18f6627,18f6722,18f8527,18f8622,18f8627,18f8722:1822200:1824501
-1865850:18f6585,18f6680,18f8585,18f8680:1822200:1822200                         # TODO: verify family members and USART
+1865850:18f6585,18f6680,18f8585,18f8680:1822200:1865850
 1865501:18f65j50,18f66j50,18f66j55,18f67j50,18f85j50,18f86j50,18f86j55,18f87j50:1865501:1824501
 1866601:18f66j60,18f66j65,18f67j60,18f86j60,18f86j65,18f87j60,18f96j60,18f96j65,18f97j60:1822200:1824501
