@@ -1,4 +1,10 @@
 2012-10-16 Molnar Karoly <molnarkaroly AT users.sf.net>
+	* support/scripts/pic18fam-h-gen.pl,
+	  device/non-free/include/pic16/pic18fam.h:
+	  Repaired the wrong classification of "__SDCC_PIC16_FAMILY 1865850"
+	  in the (E)USART style.
+
+2012-10-16 Molnar Karoly <molnarkaroly AT users.sf.net>
 	* doc/sdccman.lyx: Added the new pic processors.
 
 2012-10-15 Philipp Klaus Krause <philipp AT informatik.uni-frankfurt.de>
